# MutaGReP

./: .aiignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
docs/: example_human_readable_plan.md  index.html  plan_search_result_example.json  repo_structure.md
examples/: run_plan_search_for_repo.py
src/mutagrep/: experiment_utils.py  repository_accounting.py  testing_utilities.py  utilities.py  vector_search.py
src/mutagrep/coderec/v3/: intent_generation.py  symbol_mining.py
src/mutagrep/longcodearena/: __init__.py  scoring.py  types.py
src/mutagrep/plan_search/: codenav_mnms_eval_slice_ids.json  components.py  containers.py  domain_models.py  generic_search.py  lca_benchmark.py  lca_judge.py  mnms_benchmark.py  mnms_hard_slice_ids.json  mnms_search_tool.py  plan_based_code_generation.py  stub_components.py  typing_utils.py
src/mutagrep/plan_search/code_search_tools/: direct_intent_search.py  openai_one_step.py
src/mutagrep/plan_search/rankers/: likert_llm_judge.py  longcodearena_oracle.py  most_unique_symbols.py  step_level_likert_llm_judge.py  step_level_likert_llm_judge_v2.py
src/mutagrep/plan_search/successor_functions/: plan_diff_successor_fn.py  xml_like.py  xml_like_sampling.py  xml_like_sampling_unconstrained.py
src/mutagrep/plan_search/symbol_retrievers/: bm25_simple.py  openai_vectorb.py
tests/: conftest.py  test_longcodearena_scoring.py  test_symbols.py  test_vector_search.py
tests/plan_search/: test_bm25s_retriever.py  test_components.py  test_containers.py  test_generic_search.py  test_importable.py  test_lca_judge.py  test_lca_scoring.py  test_mnms_tools.py  test_unconstrained_successor_function.py
tests/plan_search/code_search_tools/: test_code_search_tool_outputs.py  test_direct_intent_code_search_tool.py  test_openai_one_step_search_tool.py
tests/plan_search/rankers/: test_likert_llm_judge_ranker.py  test_longcodearena_oracle_ranker.py  test_most_unique_sumbols_ranker.py  test_step_level_likert_llm_judge.py  test_step_level_likert_llm_judge_v2.py
tests/plan_search/symbol_retrievers/: test_openai_vectordb.py
