[build-system]
build-backend = "pdm.backend"
requires = [
    "pdm-backend",
]

[project]
authors = [
    { name = "Zaid Khan" },
    { name = "Ali Farhadi" },
    { name = "Ranjay Krishna" },
    { name = "Luca Weihs" },
    { name = "Mohit Bansal" },
    { name = "Tanmay Gupta" },
    { name = "Louis Maddox", email = "louismmx@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
]
dependencies = [
]
description = "Planning for code-use tasks using embedded intents."
keywords = [
    "code generation",
    "embedding",
    "planning",
    "repositories",
]
name = "mutagrep"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "pdm-bump>=0.9.10",
    "pdm>=2.22.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[project.scripts]
mutagrep = "mutagrep.cli:main"

[project.urls]
Documentation = "https://mutagrep.vercel.app/"
Homepage = "https://github.com/lmmx/mutagrep"
Repository = "https://github.com/lmmx/mutagrep.git"

[tool.ruff.lint]
ignore = [
    "C408",
    "C901",
    "E501",
    "E722",
    "E741",
]
select = [
    "C",
    "D",
    "E",
    "F",
    "I",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "E401",
    "F401",
]

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
